--- a/common.css
+++ b/common.css
@@ -1,10 +1,12 @@
 * {
     font-family: 'Poppins', sans-serif;
+    /* box-sizing: border-box; */
 
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    margin: 0;
 }
 
 html,
