--- a/categories.css
+++ b/categories.css
@@ -10,6 +10,8 @@
     --line-height: 28px;
     --title-margin-bottom: 50px;
     --title-font-size: 20px;
+
+    --box-shadow-main: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
 }
 
 /**************** header ****************/
@@ -222,7 +224,7 @@ header label:hover{
     border: none;
     bottom: 300px;
     padding: 10px 50px;
-    margin-top: 0;
+    margin-top: 10px;
     background-color: rgba(239, 239, 239, 0.9);
     color: rgba(239, 239, 239, 0.9);
     font-size: 16px;
@@ -272,19 +274,304 @@ header label:hover{
 /**************** categories main viewport ****************/
 
 /**************** categories first section ****************/
-.categories-first-section{
-    background-color: rgb(158, 44, 44);
+.categories-first-section,
+.categories-first-section-2{
+    background-color: var(--primary-white);
     padding: 50px;
     font-size: 0.9rem;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px;
 }
 
+.categories-first-section-2{
+    padding-top: 0;
+}
+
+.categories-first-section-item{
+    display: flex;
+    gap: 60px;
+    justify-content: center;
+}
+
+.categories-first-section-item img{
+    width: 400px;
+    height: 400px;
+    box-shadow: var(--box-shadow-main);
+}
+
+.categories-first-section-item-description{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.categories-first-section-item h2, 
+.categories-first-section-item h3{
+    text-align: center;
+    color: var(--primary-black);
+}
+
+.categories-first-section-item h2{
+    font-size: 18px;
+}
+
+.categories-first-section-item h3{
+    font-size: 16px;
+}
+
+.categories-first-section-item iframe {
+    width: 400px;
+    height: 400px;
+    border: 0;
+    box-shadow: var(--box-shadow-main);
+}
+
+.categories-first-section-description{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    max-width: 800px;
+    font-size: 16px;
+}
 /**************** categories first section ****************/
 
+/**************** categories second section ****************/
+.categories-second-section,
+.categories-second-section-2 {
+    background-color: var(--persian-green);
+    padding: 50px;
+    font-size: 0.9rem;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--primary-white);
+}
+
+.categories-second-section-2{
+    padding-top: 0;
+}
+
+.categories-second-section-item {
+    display: flex;
+    gap: 60px;
+    justify-content: center;
+}
+
+.categories-second-section-item img {
+    width: 400px;
+    height: 400px;
+    box-shadow: var(--box-shadow-main);
+}
+
+.categories-second-section-item-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.categories-second-section-item h2,
+.categories-second-section-item h3 {
+    text-align: center;
+    color: var(--primary-black);
+}
+
+.categories-second-section-item h2 {
+    font-size: 18px;
+}
+
+.categories-second-section-item h3 {
+    font-size: 16px;
+}
+
+.categories-second-section-item iframe {
+    width: 400px;
+    height: 400px;
+    border: 0;
+    box-shadow: var(--box-shadow-main);
+}
+
+.categories-second-section-2 hr{
+    background-color: var(--primary-black);
+}
+
+.categories-second-section-description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    max-width: 800px;
+    font-size: 16px;
+}
+/**************** categories second section ****************/
+
+/**************** categories third section ****************/
+.categories-third-section,
+.categories-third-section-2 {
+    background-color: var(--primary-white);
+    padding: 50px;
+    font-size: 0.9rem;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.categories-third-section-2 {
+    padding-top: 0;
+}
+
+.categories-third-section-item {
+    display: flex;
+    gap: 60px;
+    justify-content: center;
+}
+
+.categories-third-section-item img {
+    width: 400px;
+    height: 400px;
+    box-shadow: var(--box-shadow-main);
+}
+
+.categories-third-section-item-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.categories-third-section-item h2,
+.categories-third-section-item h3 {
+    text-align: center;
+    color: var(--primary-black);
+}
+
+.categories-third-section-item h2 {
+    font-size: 18px;
+}
+
+.categories-third-section-item h3 {
+    font-size: 16px;
+}
+
+.categories-third-section-item iframe {
+    width: 400px;
+    height: 400px;
+    border: 0;
+    box-shadow: var(--box-shadow-main);
+}
+
+.categories-third-section-description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    max-width: 800px;
+    font-size: 16px;
+}
+/**************** categories third section ****************/
+
+/**************** categories third section ****************/
+.table-section{
+    background-color: var(--primary-white);
+    padding: 50px 200px;
+    font-size: 0.9rem;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+table {
+    border-collapse: collapse;
+    margin: 0;
+    width: 100%;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+}
+
+table th,
+table td {
+    text-align: center;
+    padding: 1em;
+    max-width: 100px;
+}
+
+table tr {
+    padding: 0.45em;
+    transition: all 0.3s ease;
+}
+
+thead tr{
+    color: var(--persian-green);
+}
+
+tbody tr:nth-child(odd) {
+    background-color: rgb(223, 223, 223);
+}
+
+@media only screen and (max-width: 1140px){
+
+}
+
+@media only screen and (max-width: 800px) {
+    .table-section{
+        padding: 10px;
+    }
+
+    table{
+        border: 3px solid rgb(26, 26, 26);
+    }
+
+    table thead tr{
+        display: none;
+    }
+
+    table tr{
+        display: block;
+    }
+
+    table th, table td{
+        padding: .5em;
+    }
+
+    table td{
+        text-align: right;
+        display: flex;
+    }
+
+    table td:before{
+        content: attr(data-title) "\00A0 : \00A0";
+        float: left;
+    }
+
+    tbody tr:nth-child(even){
+        background-color: var(--persian-green);
+        color: var(--primary-white);
+    }
+
+    table th,
+    table td {
+        max-width: 100%;
+    }
+}
+/**************** categories third section ****************/
 
 /****************  footer ****************/
 footer {
