--- a/main.css
+++ b/main.css
@@ -118,6 +118,7 @@ header label:hover{
     header .nav-bar ul li ul{
         position: relative;
         width: 100%;
+        box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0);
     }
 
     header .nav-bar ul li ul li{
@@ -222,7 +223,7 @@ header label:hover{
     border: none;
     bottom: 300px;
     padding: 10px 50px;
-    margin-top: 0;
+    margin-top: 10px;
     background-color: rgba(239, 239, 239, 0.9);
     color: rgba(239, 239, 239, 0.9);
     font-size: 16px;
