--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
 /**************** header ****************/
 header{
     background: var(--primary-white);
-    position: fixed;
+    position: sticky;
     top: 0;
     top: 0;
     left: 0;
@@ -25,7 +25,6 @@ header{
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-
     z-index: 100;
 }
 
@@ -89,7 +88,7 @@ header label:hover{
     color: var(--persian-green);
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 840px) {
     header{
         padding: 14px;
     }
@@ -107,6 +106,17 @@ header label:hover{
         display: none;
     }
 
+    header .nav-bar ul {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        margin: 0;
+        box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.06);
+    }
+
     header .nav-bar ul li{
         width: 100%;
         display: flex;
@@ -118,7 +128,7 @@ header label:hover{
     header .nav-bar ul li ul{
         position: relative;
         width: 100%;
-        box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0);
+        box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.0);
     }
 
     header .nav-bar ul li ul li{
@@ -126,14 +136,13 @@ header label:hover{
     }
 
     #menu-bar:checked ~ .nav-bar{
-        display: initial;
+        display: flex;
     }
-
 }
 /**************** header ****************/
 
 /**************** main viewport ****************/
-.main-viewport{
+.main-viewport {
     background-color: var(--primary-black);
     position: relative;
     border: none;
@@ -163,14 +172,14 @@ header label:hover{
     z-index: 1;
 }
 
-.main-viewport-image{
+.main-viewport-image {
     object-fit: cover;
     width: 100vw;
     height: 100vh;
     display: block;
 }
 
-.main-viewport-header{
+.main-viewport-header {
     position: absolute;
     color: var(--primary-white);
     z-index: 1;
@@ -180,7 +189,7 @@ header label:hover{
     margin-top: 10%;
 }
 
-.main-viewport-header h2{
+.main-viewport-header h2 {
     letter-spacing: 10px;
     font-size: 50px;
     text-transform: uppercase;
@@ -189,34 +198,12 @@ header label:hover{
     transition: letter-spacing 0.3s ease-in-out;
 }
 
-.main-viewport-header ol{
+.main-viewport-header ol {
     color: #ffffff;
     z-index: 1;
     position: absolute;
     bottom: 28px;
     display: block;
-}   
-
-@media screen and (max-width: 1140px) {
-    .main-viewport-header {
-        margin-top: 25%;
-    }
-}
-
-@media screen and (max-width: 640px) {
-    .main-viewport-header {
-        margin-top: 25%;
-    }
-
-    .main-viewport-header h2 {
-        font-size: 30px;
-    }
-}
-
-@media screen and (min-width: 641px) {
-    .main-viewport-header h2:hover {
-        letter-spacing: 20px;
-        }
 }
 
 .scroll-btn {
@@ -268,6 +255,28 @@ header label:hover{
     100% {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@media screen and (max-width: 1140px) {
+    .main-viewport-header {
+        margin-top: 25%;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .main-viewport-header {
+        margin-top: 25%;
+    }
+
+    .main-viewport-header h2 {
+        font-size: 30px;
+    }
+}
+
+@media screen and (min-width: 641px) {
+    .main-viewport-header h2:hover {
+        letter-spacing: 20px;
     }
 }
 /**************** main viewport ****************/
@@ -521,23 +530,31 @@ header label:hover{
     transition: all 0.2s ease;
 }
 
-.third-section-item>div {
+.third-section-item .third-section-text {
     opacity: 0;
     transform: translateY(20px);
-    transition: opacity 0.5s, transform 0.5s;
+    transition: opacity 0.5s, transform 0.5s, letter-spacing 0.5s;
 }
 
-.third-section-item>div {
+.third-section-long-item .third-section-text {
     opacity: 0;
     transform: translateY(20px);
-    transition: opacity 0.5s, transform 0.5s;
+    transition: opacity 0.5s, transform 0.5s, letter-spacing 0.5s;
 }
 
-.third-section-item:hover>div,
-.third-section-item:active>div {
+.third-section-item:hover .third-section-text,
+.third-section-item:active .third-section-text {
     opacity: 1;
     transform: translateY(0);
-    transition: opacity 0.5s, transform 0.5s;
+    transition: opacity 0.5s, transform 0.5s, letter-spacing 0.5s;
+    letter-spacing: 4px;
+}
+
+.third-section-long-item:hover .third-section-text,
+.third-section-long-item:active .third-section-text {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 0.5s, transform 0.5s, letter-spacing 0.5s;
     letter-spacing: 4px;
 }
 
@@ -846,45 +863,47 @@ footer {
 }
 
 .footer-container {
-    max-width: 1000px;
+    /* max-width: 1000px; */
     margin: 0;
     display: flex;
     text-align: center;
+    justify-content: center;
 }
 
-.footer-logo{
+.footer-logo {
     margin-right: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.footer-logo h1{
+.footer-logo h1 {
     color: var(--primary-grey);
 }
 
-.footer-logo .span-1, .span-2 {
+.footer-logo .span-1,
+.span-2 {
     transition: all 0.5s ease;
 }
 
 .footer-logo .span-1:hover,
-.footer-logo .span-2:hover{
+.footer-logo .span-2:hover {
     color: var(--persian-green);
     cursor: pointer;
 }
 
-.footer-middle{
+.footer-middle {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
-.footer-list{
+.footer-list {
     width: 25%;
-    padding: 0 15px;
-    margin-right: 40px;
+    padding: 0 30px;
+    /* margin-right: 40px; */
 }
 
-.footer-list h4{
+.footer-list h4 {
     font-size: 12px;
     margin-bottom: 10px;
     position: relative;
@@ -913,16 +932,16 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* margin-left: 60px; */
+    margin-left: 60px;
 }
 
-.footer-social-container .footer-social-list{
+.footer-social-container .footer-social-list {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.footer-social-container .footer-social-list a{
+.footer-social-container .footer-social-list a {
     display: inline-block;
     margin: 8px 10px 10px 0;
     text-align: center;
@@ -945,4 +964,23 @@ footer {
 .footer-social-container a:active img {
     transform: scale(0.5);
 }
+
+@media screen and (max-width: 890px) {
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .footer-social-container {
+        margin-left: 0;
+    }
+
+    .footer-logo {
+        margin-right: 0;
+    }
+}
+
 /****************  footer ****************/
