--- a/categories.css
+++ b/categories.css
@@ -441,6 +441,10 @@ tbody tr:nth-child(odd) {
     background-color: rgb(223, 223, 223);
 }
 
+tfoot td {
+    color: var(--persian-green);
+}
+
 @media only screen and (max-width: 800px) {
     .table-section{
         padding: 10px;
