--- a/categories.css
+++ b/categories.css
@@ -365,11 +365,157 @@
 }
 /**************** categories third section ****************/
 
+/**************** categories fourth section ****************/
+.categories-fourth-section,
+.categories-fourth-section-2 {
+    background-color: var(--persian-green);
+    color: var(--primary-white);
+    padding: 50px;
+    font-size: 0.9rem;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.categories-fourth-section-2 {
+    padding-top: 0;
+}
+
+.categories-fourth-section-item {
+    display: flex;
+    gap: 60px;
+    justify-content: center;
+}
+
+.categories-fourth-section-item img,
+.categories-fourth-section-item iframe {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    aspect-ratio: 1/1;
+    box-shadow: var(--box-shadow-main);
+}
+
+.categories-fourth-section-item iframe {
+    border: 0;
+}
+
+.categories-fourth-section-item-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.categories-fourth-section-item h2,
+.categories-fourth-section-item h3 {
+    text-align: center;
+    color: var(--primary-black);
+}
+
+.categories-fourth-section-item h2 {
+    font-size: 18px;
+}
+
+.categories-fourth-section-item h3 {
+    font-size: 16px;
+}
+
+.categories-fourth-section-2 hr {
+    background-color: var(--primary-black);
+}
+
+.categories-fourth-section-description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    max-width: 800px;
+    font-size: 16px;
+}
+/**************** categories fourth section ****************/
+
+/**************** categories fifth section ****************/
+.categories-fifth-section,
+.categories-fifth-section-2 {
+    background-color: var(--primary-white);
+    padding: 50px;
+    font-size: 0.9rem;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.categories-fifth-section-2 {
+    padding-top: 0;
+}
+
+.categories-fifth-section-item {
+    display: flex;
+    gap: 60px;
+    justify-content: center;
+}
+
+.categories-fifth-section-item img,
+.categories-fifth-section-item iframe {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    aspect-ratio: 1/1;
+    box-shadow: var(--box-shadow-main);
+}
+
+.categories-fifth-section-item iframe {
+    border: 0;
+}
+
+.categories-fifth-section-item-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    max-width: 400px;
+    width: 400px;
+}
+
+.categories-fifth-section-item h2,
+.categories-fifth-section-item h3 {
+    text-align: center;
+    color: var(--primary-black);
+}
+
+.categories-fifth-section-item h2 {
+    font-size: 18px;
+}
+
+.categories-fifth-section-item h3 {
+    font-size: 16px;
+}
+
+.categories-fifth-section-description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    max-width: 800px;
+    font-size: 16px;
+}
+
+/**************** categories fifth section ****************/
+
 /**************** common ****************/
 @media only screen and (max-width: 1141px) {
     .categories-first-section-container,
     .categories-second-section-container,
-    .categories-third-section-container {
+    .categories-third-section-container,
+    .categories-fourth-section-container,
+    .categories-fifth-section-container {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -378,7 +524,9 @@
 
     .categories-first-section-item,
     .categories-second-section-item,
-    .categories-third-section-item {
+    .categories-third-section-item,
+    .categories-fourth-section-item,
+    .categories-fifth-section-item {
         flex-direction: column;
         align-items: center;
         text-align: center;
@@ -386,7 +534,9 @@
 
     .categories-first-section-item-description,
     .categories-second-section-item-description,
-    .categories-third-section-item-description {
+    .categories-third-section-item-description,
+    .categories-fourth-section-item-description,
+    .categories-fifth-section-item-description {
         max-width: 100%;
         width: 100%;
     }
